Agregados cambios para realizar nueva busqueda

--- a/crud-frontend/views/user-choose-table.html
+++ b/crud-frontend/views/user-choose-table.html
@@ -62,7 +62,7 @@
                                     <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Encontrar los sitios más convenientes a partir de los criterios seleccionados previamente</strong></li>
                                     <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Agregar nuevos sitios para analizar</strong></li>
                                 </ul>
-                                <a href="#" class="btn btn-block btn-primary text-uppercase">Ir</a>
+                                <a href="/#!/new-search" class="btn btn-block btn-primary text-uppercase">Ir</a>
                             </div>
                         </div>
                     </div>
