--- a/crud-frontend/styles/login.css
+++ b/crud-frontend/styles/login.css
@@ -60,3 +60,11 @@
     text-decoration:none;
     color:#fff;
 }
+
+.table td {
+    text-align: center;
+}
+
+.table th {
+    text-align: center;
+}
