Ajustado link de URLs con nuevo estilo

--- a/crud-frontend/views/new-search.html
+++ b/crud-frontend/views/new-search.html
@@ -14,13 +14,13 @@
                     <div class="col form-group">
                         <input type="text" class="form-control" placeholder="Hotel URL (from Booking)" ng-model="adversaryInput" />
                         <div class="row">
-                            <a href="https://www.booking.com/" target="_blank">Don't you know what is the correct hotel URL? Click here.</a>
+                            <a href="https://www.booking.com/" class="correct-url" target="_blank">Don't you know what is the correct hotel URL? Click here.</a>
                         </div>
                     </div>
                     <div class="col form-group">
                         <input type="text" class="form-control" placeholder="Attractions URL (from TripAdvisor)" ng-model="gameInput" />
                         <div class="row">
-                            <a href="https://www.tripadvisor.com/Attractions" target="_blank">Don't you know what is the correct attractions URL? Click here.</a>
+                            <a href="https://www.tripadvisor.com/Attractions" class="correct-url" target="_blank">Don't you know what is the correct attractions URL? Click here.</a>
                         </div>
                     </div>
                 </div>
