Terminado algoritmo de AHP

--- a/crud-frontend/views/new-search.html
+++ b/crud-frontend/views/new-search.html
@@ -111,7 +111,7 @@
         </div>
 
         <div class="container">
-            <button type="button" class="btn btn-secondary btn-lg btn-block" ng-show="showRunAlgorithmButton" ng-click="onRunAlgorithmClicked()">Run algorithm</button>
+            <button type="button" class="btn btn-secondary btn-lg btn-block" ng-click="onRunAlgorithmClicked()">Run algorithm</button>
         </div>
 
     </body>
