--- a/crud-frontend/views/user-choose-table.html
+++ b/crud-frontend/views/user-choose-table.html
@@ -6,22 +6,14 @@
     </head>
 
     <body>
-
-        <nav class="navbar navbar-dark bg-dark">
-            <a class="navbar-brand" href="/">
-                <img src="https://img.pngio.com/travel-png-images-transparent-free-download-pngmartcom-travel-png-free-download-3344_2453.png" width="25" height="25" class="d-inline-block align-top" alt="">
-                TravelApp
-            </a>
-        </nav>
-
         <section class="pricing py-5">
             <div class="container">
                 <div class="row">
                     
                     <!-- Free Tier -->
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 tier-body">
                         <div class="card mb-5 mb-lg-0">
-                            <div class="card-body">
+                            <div class="card-body tier-container">
                                 <h6 class="card-price text-uppercase text-center">Historial</h6>
                                 <hr>
 
@@ -48,9 +40,9 @@
                     </div>
                     
                     <!-- Plus Tier -->
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 tier-body">
                         <div class="card mb-5 mb-lg-0">
-                            <div class="card-body">
+                            <div class="card-body tier-container">
                                 <h1 class="card-price text-uppercase text-center">Nueva búsqueda</h1>
                                 <hr>
 
