--- a/crud-frontend/styles/user-choose-table.css
+++ b/crud-frontend/styles/user-choose-table.css
@@ -1,5 +1,9 @@
 body {
-    background: #e0e0e0;
+    background: #eeeeee;
+}
+
+.tier-body {
+    padding-top: 9%;
 }
 
 .pricing .card {
@@ -47,6 +51,14 @@ body {
     transition: all 0.2s;
 }
 
+.btn {
+    background-color: #1089ff;
+}
+
+.tier-container {
+    padding-bottom: 29px;
+}
+
 /* Hover Effects on Card */
 
 @media (min-width: 992px) {
@@ -59,3 +71,7 @@ body {
         opacity: 1;
     }
 }
+
+    .btn:hover {
+        background-color: #23374d;
+    }   
