Agregado almacenamiento en base de lugares y criterios

--- a/crud-frontend/styles/styles.css
+++ b/crud-frontend/styles/styles.css
@@ -128,3 +128,13 @@ body {
     margin-right: 5%;
     margin-top: 1%;
 }
+
+.dropdown-submenu {
+    position: relative;
+  }
+  
+  .dropdown-submenu .dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -1px;
+  }
