--- a/crud-frontend/styles/styles.css
+++ b/crud-frontend/styles/styles.css
@@ -138,3 +138,12 @@ body {
     left: 100%;
     margin-top: -1px;
   }
+
+.optionGroup {
+    font-weight: bold;
+    font-style: italic;
+}
+    
+.optionChild {
+    padding-left: 15px;
+}
