Cambios front + reorganizacion del new-search + validaciones de visibilidad

--- a/crud-frontend/styles/styles.css
+++ b/crud-frontend/styles/styles.css
@@ -147,3 +147,12 @@ body {
 .optionChild {
     padding-left: 15px;
 }
+
+.defaultColumn {
+    background-color: #e5e5e5;
+}
+
+
+.stickyFooter {
+    position: fixed;
+}
