--- a/crud-frontend/views/new-search.html
+++ b/crud-frontend/views/new-search.html
@@ -27,25 +27,6 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-md-6">
-                    <label>Lugares:</label>
-                    <select class="container-fluid" ng-model="selectedPlace" ng-options="place.name for place in allPlaces" ng-change="onPlaceOptionClicked()"></select>
-                    <!-- <select class="container-fluid">
-                        <option ng-repeat="place in allPlaces">{{place.name}}</option>
-                    </select> -->
-                </div>
-
-                <div class="col-md-6 container-fluid">
-                    <label>Criterios:</label>
-                    <select class="container-fluid" ng-model="selectedCriteria" ng-change="onCriteriaOptionClicked()">
-                        <optgroup ng-repeat="criteria in allCriterias" label="{{criteria.name}}">
-                            <option ng-repeat="criteriaChild in criteria.children">{{criteriaChild.name}}</option>
-                        </optgroup>
-                    </select>
-                </div>
-            </div>
-
         </div>
         <div class="new-search-container">
             <div class="row">
@@ -57,6 +38,9 @@
                             </tr>
                         </thead>
                         
+                        <td>
+                            <select class="container-fluid" ng-model="selectedPlace" ng-options="place.name for place in allPlaces" ng-change="onPlaceOptionClicked()"></select>
+                        </td>
                         <tbody ng-repeat="place in placesToCompare">
                             <tr>
                                 <td>{{place.name}}</td>
@@ -74,6 +58,13 @@
                             </tr>
                         </thead>
                         
+                        <td>
+                            <select class="container-fluid" ng-model="selectedCriteria" ng-change="onCriteriaOptionClicked()">
+                                <optgroup ng-repeat="criteria in allCriterias" label="{{criteria.name}}">
+                                    <option ng-repeat="criteriaChild in criteria.children">{{criteriaChild.name}}</option>
+                                </optgroup>
+                            </select>
+                        </td>
                         <tbody ng-repeat="criteria in criterias">
                             <tr>
                                 <td>
@@ -91,7 +82,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row" ng-show="tableVisible">
                 <table id="rankCriteriaTable" class="table table-hover table-bordered table-ta">
                     <thead class="palette-dark">
                       <tr>
@@ -123,11 +114,11 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container" ng-show="!tableVisible">
             <button type="button" class="btn btn-secondary btn-lg btn-block" ng-click="onGetTableContentClicked()">Get table content</button>
         </div>
 
-        <div class="container">
+        <div class="container" ng-show="tableVisible == true">
             <button type="button" class="btn btn-secondary btn-lg btn-block" ng-click="onRunAlgorithmClicked()">Run algorithm</button>
         </div>
 
