--- a/crud-frontend/views/login.html
+++ b/crud-frontend/views/login.html
@@ -20,9 +20,10 @@
                         <div class="form-group">
                             <input type="password" class="form-control" placeholder="Contraseña" ng-model="loginPassword" />
                         </div>
+
                         
                         <div class="form-group">
-                            <input type="submit" class="btnSubmit" value="Ingresar" ng-click="onLoginClicked()"/>
+                            <input name="pushForm" type="submit" class="btnSubmit" value="Ingresar" ng-click="onLoginClicked()"/>
                         </div>
                         <p class="error-field" ng-show="!userLogged && myForm.$submitted"> * Por favor, ingresar un usuario y contraseña válidos </p>
                                 
