Base del trabajo terminado

--- a/crud-frontend/views/user-choose-table.html
+++ b/crud-frontend/views/user-choose-table.html
@@ -34,7 +34,7 @@
                                     </strong></li>
                                 </ul>
                             
-                                <a href="#" class="btn btn-block btn-primary text-uppercase">Ir</a>
+                                <a href="/#!/history" class="btn btn-block btn-primary text-uppercase">Ir</a>
                             </div>
                         </div>
                     </div>
