--- a/crud-frontend/views/new-search.html
+++ b/crud-frontend/views/new-search.html
@@ -6,18 +6,24 @@
     </head>
 
     <body>
+
+        <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+            <h1 class="display-4">Nuevo lugar</h1>
+            <p class="lead">A continuación podés agregar cualquier lugar a elección junto a las atracciones del mismo para luego realizar la búsqueda deseada</p>
+        </div>
+
         <div class="container container-ta">
             <div class="row">
                 <div class="col form-group">
-                    <input type="text" class="form-control" placeholder="Hotel URL (from Booking)" ng-model="hotelsUrl" />
+                    <input type="text" class="form-control" placeholder="URL del Hotel (de Booking)" ng-model="hotelsUrl" />
                     <div class="row">
-                        <a href="https://www.booking.com/index.es-ar.html?label=gen173nr-1DCAEoggI46AdIM1gEaAyIAQGYASy4ARfIAQzYAQPoAQGIAgGoAgO4ArewjfQFwAIB;sid=b15aa771fe5e995e25dfe861d9e48c85;keep_landing=1&sb_price_type=total&" class="correct-url" target="_blank">Don't you know what is the correct hotel URL? Click here.</a>
+                        <a href="https://www.booking.com/index.es-ar.html?label=gen173nr-1DCAEoggI46AdIM1gEaAyIAQGYASy4ARfIAQzYAQPoAQGIAgGoAgO4ArewjfQFwAIB;sid=b15aa771fe5e995e25dfe861d9e48c85;keep_landing=1&sb_price_type=total&" class="correct-url" target="_blank">No sabés cuál es la URL correcta? Click aquí.</a>
                     </div>
                 </div>
                 <div class="col form-group">
-                    <input type="text" class="form-control" placeholder="Attractions URL (from TripAdvisor)" ng-model="attractionsUrl" />
+                    <input type="text" class="form-control" placeholder="URL de Atracciones (de TripAdvisor)" ng-model="attractionsUrl" />
                     <div class="row">
-                        <a href="https://www.tripadvisor.com.ar/Attractions" class="correct-url" target="_blank">Don't you know what is the correct attractions URL? Click here.</a>
+                        <a href="https://www.tripadvisor.com.ar/Attractions" class="correct-url" target="_blank">No sabés cuál es la URL correcta? Click aquí.</a>
                     </div>
                 </div>
             </div>
@@ -28,6 +34,13 @@
             </div>
 
         </div>
+
+        <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+            <h1 class="display-4">Nueva búsqueda</h1>
+            <p class="lead">Para realizar el algoritmo AHP sobre distintos lugares y criterios</p>
+        </div>
+
+
         <div class="new-search-container">
             <div class="row">
                 <div class="col-md-6">
@@ -62,6 +75,7 @@
                             <select class="container-fluid" ng-model="selectedCriteria" ng-change="onCriteriaOptionClicked()">
                                 <optgroup ng-repeat="criteria in allCriterias" label="{{criteria.name}}">
                                     <option ng-repeat="criteriaChild in criteria.children">{{criteriaChild.name}}</option>
+                                    <option value={{criteria.name}}>Todo</option>
                                 </optgroup>
                             </select>
                         </td>
@@ -99,7 +113,7 @@
                                 <div class="dropdown">
 
                                     <select ng-if="colIndex === $index" class="form-control" disabled>
-                                        <option value="{{null}}">Same importance</option>
+                                        <option value="{{null}}">Misma importancia</option>
                                     </select>
                                       
                                     <select ng-if="colIndex !== $index" class="form-control">
@@ -115,11 +129,11 @@
         </div>
 
         <div class="container" ng-show="!tableVisible">
-            <button type="button" class="btn btn-secondary btn-lg btn-block" ng-click="onGetTableContentClicked()">Get table content</button>
+            <button type="button" class="btn btn-secondary btn-lg btn-block" ng-click="onGetTableContentClicked()">Rankear los criterios elegidos</button>
         </div>
 
         <div class="container" ng-show="tableVisible == true">
-            <button type="button" class="btn btn-secondary btn-lg btn-block" ng-click="onRunAlgorithmClicked()">Run algorithm</button>
+            <button type="button" class="btn btn-secondary btn-lg btn-block" ng-click="onRunAlgorithmClicked()">Obtener resultados</button>
         </div>
 
     </body>
