--- a/crud-frontend/views/new-search.html
+++ b/crud-frontend/views/new-search.html
@@ -100,7 +100,7 @@
                 <table id="rankCriteriaTable" class="table table-hover table-bordered table-ta">
                     <thead class="palette-dark">
                       <tr>
-                        <th scope="col">Places / Criterias</th>
+                        <th scope="col">Lugares / Criterios</th>
                         <th scope="col" ng-repeat="criteria in criterias">
                             {{criteria.name}}
                         </th>
