--- a/crud-frontend/views/user-choose-table.html
+++ b/crud-frontend/views/user-choose-table.html
@@ -49,7 +49,7 @@
                                 <p> Donde podes: </p>
                                 
                                 <ul class="fa-ul">
-                                    <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Seleccionar distintos lugares del pais</strong></li>
+                                    <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Seleccionar distintos lugares del mundo</strong></li>
                                     <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Seleccionar distintos criterios a comparar</strong></li>
                                     <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Encontrar los sitios más convenientes a partir de los criterios seleccionados previamente</strong></li>
                                     <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Agregar nuevos sitios para analizar</strong></li>
